refactor[3단계] : 일정 목록 조회기본 URI로 변경